Alignment Issues Fixed

--- a/src/components/toaster.css
+++ b/src/components/toaster.css
@@ -1,11 +1,5 @@
 .toaster {
     position: fixed;
     bottom: 5px;
-    right: -50px;
-}
-
-.toaster-show {
-    position: fixed;
-    bottom: 5px;
     right: 50px;
 }
