--- a/src/pages/common/ads.css
+++ b/src/pages/common/ads.css
@@ -2,7 +2,7 @@
   position: relative;
   width: fit-content;
   right: 10px;
-  z-index: -1;
+  z-index: 1;
   display: flex;
   align-items: center;
   background-color: #f7f7f7;
